--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/CargarArchivos.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/CargarArchivos.fxml
@@ -29,5 +29,6 @@
          </font>
       </Label>
       <Button fx:id="loadFileButton3" layoutX="256.0" layoutY="318.0" mnemonicParsing="false" onAction="#switchToMenu" prefHeight="28.0" prefWidth="88.0" text="Menu" />
+      <Button fx:id="next" layoutX="496.0" layoutY="334.0" mnemonicParsing="false" onAction="#switchToMen" text="Skip" />
    </children>
 </AnchorPane>
