--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/Menu.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/Menu.fxml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.MenuController">
-    
+<AnchorPane id="AnchorPane" prefHeight="454.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.MenuController">
+   <children>
+      <Label layoutX="104.0" layoutY="89.0" text="Nombre del jugador:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="104.0" layoutY="130.0" text="Máximo número de preguntas:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nombreJugador" layoutX="333.0" layoutY="86.0" />
+      <TextField fx:id="cantidadPreguntas" layoutX="333.0" layoutY="127.0" />
+      <Label fx:id="mensaje" layoutX="66.0" layoutY="248.0" prefHeight="25.0" prefWidth="313.0" textFill="#f21010" />
+      <ImageView fx:id="gif" fitHeight="135.0" fitWidth="181.0" layoutX="65.0" layoutY="285.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="224.0" layoutY="34.0" text="Adivina el Animal">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="juego" layoutX="392.0" layoutY="307.0" mnemonicParsing="false" onAction="#switchToJuego" text="Empezar Juego" />
+      <Button fx:id="retroceder" layoutX="392.0" layoutY="353.0" mnemonicParsing="false" onAction="#switchToCargarArchivos" text="Retroceder" />
+      <Label layoutX="392.0" layoutY="277.0" text="Opciones:" />
+      <Label layoutX="104.0" layoutY="172.0" text="Nombre del archivo preguntas:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="104.0" layoutY="211.0" text="Nombre del Archivo respuestas:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nombreArchivoPreguntas" layoutX="333.0" layoutY="169.0" />
+      <TextField fx:id="nombreArchivoRespuestas" layoutX="333.0" layoutY="208.0" />
+   </children>
 </AnchorPane>
