--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
+   <children>
+      <Button fx:id="no" layoutX="345.0" layoutY="200.0" mnemonicParsing="false" text="No">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="si" layoutX="184.0" layoutY="200.0" mnemonicParsing="false" text="Si">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Button>
+      <Label fx:id="texto" layoutX="101.0" layoutY="128.0" prefHeight="39.0" prefWidth="399.0" />
+      <Label layoutX="138.0" layoutY="293.0" text="Respuesta:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="respuesta" layoutX="247.0" layoutY="291.0" prefHeight="20.0" prefWidth="173.0" />
+      <Label fx:id="contador" layoutX="124.0" layoutY="88.0" text="Pregunta 1" />
+      <Button fx:id="opciones" layoutX="456.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToOpciones" text="Opciones" />
+   </children>
 </AnchorPane>
