--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/CargarArchivos.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/CargarArchivos.fxml
@@ -18,9 +18,9 @@
             <Font name="Press Start 2P Regular" size="107.0" />
          </font>
       </Label>
-      <Label fx:id="fileNameLabel" alignment="CENTER" graphicTextGap="0.0" layoutX="128.0" layoutY="431.0" prefHeight="96.0" prefWidth="308.0" textAlignment="CENTER" textFill="#325887" wrapText="true">
+      <Label fx:id="fileNameLabel" alignment="CENTER" graphicTextGap="0.0" layoutX="120.0" layoutY="431.0" prefHeight="96.0" prefWidth="308.0" textAlignment="CENTER" textFill="#325887" wrapText="true">
          <font>
-            <Font name="DM Sans Bold" size="19.0" />
+            <Font name="JoystixMonospace-Regular" size="19.0" />
          </font>
       </Label>
       <Label alignment="CENTER" layoutX="92.0" layoutY="279.0" prefHeight="38.0" prefWidth="372.0" text="PREGUNTAS">
@@ -42,9 +42,9 @@
             <Font name="Press Start 2P Regular" size="37.0" />
          </font>
       </Label>
-      <Label fx:id="fileNameLabel2" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="654.0" layoutY="429.0" prefHeight="96.0" prefWidth="308.0" textAlignment="CENTER" textFill="#325887" wrapText="true">
+      <Label fx:id="fileNameLabel2" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="646.0" layoutY="429.0" prefHeight="96.0" prefWidth="308.0" textAlignment="CENTER" textFill="#325887" wrapText="true">
          <font>
-            <Font name="DM Sans Bold" size="19.0" />
+            <Font name="JoystixMonospace-Regular" size="19.0" />
          </font>
       </Label>
       <Label layoutX="776.0" layoutY="561.0" prefHeight="51.0" prefWidth="378.0" text="COMENZAR">
