--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/Menu.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/Menu.fxml
@@ -6,40 +6,94 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.MenuController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1100.0" stylesheets="@../../../Styles/Style_Menu.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.MenuController">
    <children>
-      <Label layoutX="104.0" layoutY="89.0" text="Nombre del jugador:">
+      <Label layoutX="108.0" layoutY="232.0" text="NOMBRE DEL JUGADOR">
          <font>
-            <Font size="14.0" />
+            <Font name="Press Start 2P Regular" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="104.0" layoutY="130.0" text="Máximo número de preguntas:">
+      <Label layoutX="107.0" layoutY="231.0" text="NOMBRE DEL JUGADOR" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font name="Press Start 2P Regular" size="25.0" />
          </font>
       </Label>
-      <TextField fx:id="nombreJugador" layoutX="333.0" layoutY="86.0" />
-      <TextField fx:id="cantidadPreguntas" layoutX="333.0" layoutY="127.0" />
-      <Label fx:id="mensaje" layoutX="66.0" layoutY="248.0" prefHeight="25.0" prefWidth="313.0" textFill="#f21010" />
-      <Label layoutX="224.0" layoutY="34.0" text="Adivina el Animal">
+      <TextField fx:id="nombreJugador" layoutX="108.0" layoutY="262.0" prefHeight="46.0" prefWidth="575.0">
          <font>
-            <Font name="System Bold Italic" size="18.0" />
+            <Font name="JoystixMonospace-Regular" size="23.0" />
+         </font></TextField>
+      <TextField fx:id="cantidadPreguntas" layoutX="108.0" layoutY="470.0" prefHeight="46.0" prefWidth="575.0">
+         <font>
+            <Font name="JoystixMonospace-Regular" size="23.0" />
+         </font></TextField>
+      <Label layoutX="114.0" layoutY="88.0" text="VEINTE PREGUNTAS">
+         <font>
+            <Font name="Press Start 2P Regular" size="56.0" />
          </font>
       </Label>
-      <Button fx:id="juego" layoutX="392.0" layoutY="307.0" mnemonicParsing="false" onAction="#switchToJuego" text="Empezar Juego" />
-      <Button fx:id="retroceder" layoutX="392.0" layoutY="353.0" mnemonicParsing="false" onAction="#switchToCargarArchivos" text="Retroceder" />
-      <Label layoutX="392.0" layoutY="277.0" text="Opciones:" />
-      <Label layoutX="104.0" layoutY="172.0" text="Nombre del archivo preguntas:">
+      <Label layoutX="113.0" layoutY="86.0" text="VEINTE PREGUNTAS" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font name="Press Start 2P Regular" size="56.0" />
          </font>
       </Label>
-      <Label layoutX="104.0" layoutY="211.0" text="Nombre del Archivo respuestas:">
+      <TextField fx:id="nombreArchivoPreguntas" layoutX="515.0" layoutY="629.0" />
+      <TextField fx:id="nombreArchivoRespuestas" layoutX="381.0" layoutY="629.0" />
+      <Label layoutX="133.0" layoutY="157.0" text="¡VERSION ADIVINA EL ANIMAL!">
          <font>
-            <Font size="14.0" />
+            <Font name="Press Start 2P Regular" size="31.0" />
          </font>
       </Label>
-      <TextField fx:id="nombreArchivoPreguntas" layoutX="333.0" layoutY="169.0" />
-      <TextField fx:id="nombreArchivoRespuestas" layoutX="333.0" layoutY="208.0" />
+      <Label layoutX="132.0" layoutY="156.0" text="¡VERSION ADIVINA EL ANIMAL!" textFill="WHITE">
+         <font>
+            <Font name="Press Start 2P Regular" size="31.0" />
+         </font>
+      </Label>
+      <Label layoutX="109.0" layoutY="336.0" text="APODO DEL JUGADOR">
+         <font>
+            <Font name="Press Start 2P Regular" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="108.0" layoutY="335.0" text="APODO DEL JUGADOR" textFill="WHITE">
+         <font>
+            <Font name="Press Start 2P Regular" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="109.0" layoutY="439.0" text="NUM DE PREGUNTAS(1-20)">
+         <font>
+            <Font name="Press Start 2P Regular" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="108.0" layoutY="438.0" text="NUM DE PREGUNTAS(1-20)" textFill="WHITE">
+         <font>
+            <Font name="Press Start 2P Regular" size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="101.0" layoutY="568.0" text="VOLVER">
+         <font>
+            <Font name="Press Start 2P Regular" size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="100.0" layoutY="567.0" text="VOLVER" textFill="WHITE">
+         <font>
+            <Font name="Press Start 2P Regular" size="28.0" />
+         </font>
+      </Label>
+      <Button fx:id="retroceder" layoutX="89.0" layoutY="558.0" mnemonicParsing="false" onAction="#switchToCargarArchivos" prefHeight="46.0" prefWidth="190.0" style="-fx-background-color: CLEAR;" />
+      <TextField fx:id="apodoJugador" layoutX="108.0" layoutY="366.0" prefHeight="46.0" prefWidth="575.0">
+         <font>
+            <Font name="JoystixMonospace-Regular" size="23.0" />
+         </font>
+      </TextField>
+      <Label layoutX="774.0" layoutY="570.0" text="JUGUEMOS">
+         <font>
+            <Font name="Press Start 2P Regular" size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="773.0" layoutY="569.0" text="JUGUEMOS" textFill="WHITE">
+         <font>
+            <Font name="Press Start 2P Regular" size="28.0" />
+         </font>
+      </Label>
+      <Button fx:id="juego" layoutX="770.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToJuego" prefHeight="46.0" prefWidth="229.0" style="-fx-background-color: CLEAR;" />
    </children>
 </AnchorPane>
