--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
@@ -6,15 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
    <children>
-      <Button fx:id="no" layoutX="345.0" layoutY="200.0" mnemonicParsing="false" text="No">
+      <Button fx:id="no" layoutX="345.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#OpcionNo" text="No">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="si" layoutX="184.0" layoutY="200.0" mnemonicParsing="false" text="Si">
+      <Button fx:id="si" layoutX="184.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#OpcionSi" text="Si">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
