--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
@@ -2,31 +2,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1100.0" stylesheets="@../../../Styles/Style_Juego.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.ed_p1_grupo12_parcial2.JuegoController">
    <children>
-      <Button fx:id="no" layoutX="345.0" layoutY="200.0" mnemonicParsing="false" text="No">
+      <ImageView fitHeight="36.0" fitWidth="38.0" layoutX="69.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Images/Icon_Options.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="opciones" layoutX="59.0" layoutY="57.0" mnemonicParsing="false" onAction="#switchToOpciones" prefHeight="61.0" prefWidth="58.0" style="-fx-background-color: clear;" />
+      <Button fx:id="no" layoutX="623.0" layoutY="252.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="No" textFill="#325887">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="Arcade Normal" size="42.0" />
          </font>
       </Button>
-      <Button fx:id="si" layoutX="184.0" layoutY="200.0" mnemonicParsing="false" text="Si">
+      <Button fx:id="si" layoutX="231.0" layoutY="252.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="SI" textFill="#325887">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="Arcade Normal" size="42.0" />
          </font>
       </Button>
-      <Label fx:id="texto" layoutX="101.0" layoutY="128.0" prefHeight="39.0" prefWidth="399.0" />
-      <Label layoutX="138.0" layoutY="293.0" text="Respuesta:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="respuesta" layoutX="247.0" layoutY="291.0" prefHeight="20.0" prefWidth="173.0" />
-      <Label fx:id="contador" layoutX="124.0" layoutY="88.0" text="Pregunta 1" />
-      <Button fx:id="opciones" layoutX="456.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToOpciones" text="Opciones" />
+      <HBox alignment="CENTER" layoutX="116.0" layoutY="114.0" prefHeight="111.0" prefWidth="870.0">
+         <children>
+            <Label fx:id="contador" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="54.0" prefWidth="870.0" text="PREGUNTA UNO" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Press Start 2P Regular" size="48.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
