--- a/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
+++ b/src/main/resources/com/mycompany/ed_p1_grupo12_parcial2/juego.fxml
@@ -16,19 +16,19 @@
          </image>
       </ImageView>
       <Button fx:id="opciones" layoutX="59.0" layoutY="57.0" mnemonicParsing="false" onAction="#switchToOpciones" prefHeight="61.0" prefWidth="58.0" style="-fx-background-color: clear;" />
-      <Button fx:id="no" layoutX="623.0" layoutY="252.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="No" textFill="#325887">
+      <Button fx:id="no" layoutX="623.0" layoutY="252.0" mnemonicParsing="false" onAction="#OpcionNo" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="No" textFill="#325887">
          <font>
             <Font name="Arcade Normal" size="42.0" />
          </font>
       </Button>
-      <Button fx:id="si" layoutX="231.0" layoutY="252.0" mnemonicParsing="false" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="SI" textFill="#325887">
+      <Button fx:id="si" layoutX="231.0" layoutY="252.0" mnemonicParsing="false" onAction="#OpcionSi" prefHeight="109.0" prefWidth="246.0" style="-fx-background-color: white;" text="SI" textFill="#325887">
          <font>
             <Font name="Arcade Normal" size="42.0" />
          </font>
       </Button>
       <HBox alignment="CENTER" layoutX="116.0" layoutY="114.0" prefHeight="111.0" prefWidth="870.0">
          <children>
-            <Label fx:id="contador" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="54.0" prefWidth="870.0" text="PREGUNTA UNO" textAlignment="CENTER" textFill="WHITE">
+            <Label fx:id="texto" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="54.0" prefWidth="870.0" text="PREGUNTA UNO" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Press Start 2P Regular" size="48.0" />
                </font>
